--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portal-ui-vue3",
-  "version": "0.0.0",
+  "version": "2024.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -18,12 +18,20 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.4",
+    "axios": "^1.7.8",
+    "chance": "^1.1.12",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.2.4",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-cal": "^4.10.0",
+    "vue-i18n": "^10.0.5",
+    "vue-router": "^4.4.5",
+    "vue3-touch-events": "^4.2.0",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
