--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.4",
+    "@vue-a11y/skip-to": "^3.0.3",
     "axios": "^1.7.8",
     "chance": "^1.1.12",
     "jwt-decode": "^4.0.0",
@@ -34,9 +35,11 @@
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
+    "@intlify/unplugin-vue-i18n": "^6.0.0",
+    "@testing-library/vue": "^8.1.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.10.1",
     "@vitejs/plugin-basic-ssl": "^1.2.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitest/eslint-plugin": "1.1.7",
@@ -44,6 +47,7 @@
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "axe-core": "^4.10.2",
     "cypress": "^13.15.1",
     "eslint": "^9.14.0",
     "eslint-plugin-cypress": "^4.1.0",
@@ -51,6 +55,7 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.81.0",
     "start-server-and-test": "^2.0.8",
     "typescript": "~5.6.3",
     "vite": "^5.4.10",
