--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/prettierrc",
   "printWidth": 100,
   "semi": true,
-  "singleAttributePerLine": true,
+  "singleAttributePerLine": false,
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
