--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@primevue/themes": "^4.2.4",
     "@vue-a11y/skip-to": "^3.0.3",
+    "@vueuse/core": "^12.0.0",
     "axios": "^1.7.8",
     "chance": "^1.1.12",
     "jwt-decode": "^4.0.0",
