--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 8000 --mode development.local",
-    "serve": "vite --port 8000 --mode development.local",
+    "dev": "vite --port 8000",
+    "serve": "vite --port 8000",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
