--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cypress": "^13.15.1",
     "eslint": "^9.14.0",
     "eslint-plugin-cypress": "^4.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-vue": "^9.30.0",
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
